Deprecated reflective constructor